# testjingle

./: CMakeLists.txt  README.md  libjingle.vpp  功能列表.xlsx
base/: asyncinvoker-inl.h  asyncinvoker.cc  asyncinvoker.h  asyncpacketsocket.h  asyncresolverinterface.h  asyncsocket.h  asynctcpsocket.cc  asynctcpsocket.h  asyncudpsocket.cc  asyncudpsocket.h  atomicops.h  autodetectproxy.cc  autodetectproxy.h  bandwidthsmoother.cc  base64.cc  buffer.h  bytebuffer.cc  byteorder.h  callback.h  common.cc  common.h  cpumonitor.cc  criticalsection.h  cryptstring.h  dbus.cc  diskcache.cc  event.cc  event.h  fakesslidentity.h  fileutils.cc  fileutils.h  firewallsocketserver.cc  flags.cc  genericslot.h  gunit.h  helpers.cc  httpbase.cc  httpclient.cc  httpclient.h  httpcommon.cc  (+83 more)
base/ios/: callback.h.pump
base/jsoncpp/: assertions.h  json_reader.cpp  json_value.cpp  json_writer.cpp
base/linux/: latebindingsymboltable.cc  latebindingsymboltable.h  latebindingsymboltable.h.def  libdbusglibsymboltable.cc  linux.cc  linux.h  linuxfdwalk.c  linuxwindowpicker.cc  posix.cc  unixfilesystem.cc
base/mac/: macasyncsocket.cc  maccocoasocketserver.h  macutils_unittest.cc  macwindowpicker.cc
base/win32/: diskcache_win32.cc  schanneladapter.cc  win32.cc  win32filesystem.cc  win32regkey.cc  win32regkey.h  win32securityerrors.cc  win32socketinit.cc  win32socketserver.cc  win32socketserver.h  win32window.cc  win32window.h  win32windowpicker.cc  win32windowpicker.h  winfirewall.cc  winping.cc  winping.h
devices/linux/: linuxdevicemanager.cc  v4llookup.cc
example/: filesharedemo.cc  login_main.cc  register.cc  testdemo.cc
media/base/: capturemanager.cc  capturemanager.h  capturerenderadapter.cc  codec.cc  codec.h  constants.cc  hybridvideoengine.cc  hybridvideoengine.h  mediachannel.h  mediaengine.cc  mediaengine.h  rtpdataengine.cc  rtpdataengine.h  rtpdump.h  streamparams.cc  streamparams.h  videoadapter.cc  videoadapter.h  videocapturer.cc  videocapturer.h  videocommon.cc  videocommon.h  videoframe.cc  videoframe.h  yuvframegenerator.cc  yuvframegenerator.h
media/devices/: devicemanager.cc  devicemanager.h  filevideocapturer.cc  yuvframescapturer.cc  yuvframescapturer.h
media/devices/linux/: libudevsymboltable.cc  libudevsymboltable.h  linuxdeviceinfo.cc  linuxdevicemanager.cc
media/devices/win32/: win32devicemanager.cc
media/sctp/: sctpdataengine.cc  sctpdataengine.h
os/ios/: genericslot.h.pump  iosfilesystem.mm
os/linux/: latebindingsymboltable.cc.def  libdbusglibsymboltable.h  unixfilesystem.h
os/mac/: maccocoasocketserver.mm  maccocoasocketserver_unittest.mm  macsocketserver_unittest.cc  macutils.cc
os/win32/: diskcache_win32.cc  schanneladapter.cc  win32.cc  win32filesystem.cc  win32filesystem.h  win32regkey.cc  win32regkey.h  win32securityerrors.cc  win32socketinit.cc  win32socketserver.cc  win32socketserver.h  win32window.cc  win32window.h  win32windowpicker.cc  win32windowpicker.h  winfirewall.cc  winping.cc  winping.h
p2p/base/: asyncstuntcpsocket.cc  asyncstuntcpsocket.h  basicpacketsocketfactory.cc  basicpacketsocketfactory.h  candidate.h  constants.cc  constants.h  dtlstransport.h  dtlstransportchannel.cc  dtlstransportchannel.h  fakesession.h  p2ptransportchannel.cc  p2ptransportchannel.h  packetsocketfactory.h  port.cc  port.h  portallocator.cc  portallocator.h  portinterface.h  portproxy.cc  portproxy.h  pseudotcp.cc  rawtransportchannel.cc  rawtransportchannel.h  relayport.cc  relayport.h  relayserver.cc  relayserver.h  session.cc  session.h  sessionmanager.cc  sessionmanager.h  sessionmessages.cc  stun.cc  stunport.cc  stunport.h  stunserver.cc  stunserver.h  tcpport.cc  tcpport.h  (+15 more)
p2p/client/: basicportallocator.cc  basicportallocator.h  connectivitychecker.cc  fakeportallocator.h  httpportallocator.cc  httpportallocator.h
p2pserver/relayserver/: CMakeLists.txt
p2pserver/stunserver/: CMakeLists.txt  stunserver_main.cc
p2pserver/turnserver/: CMakeLists.txt
session/fileshare/: FileChannel.cpp  FileChannel.h  FilePump.cpp  FilePump.h  FileSession.h  FileSessionClient.cpp  FileSessionClient.h  fileshare.cc  fileshare.h
session/media/: audiomonitor.cc  bundlefilter.cc  bundlefilter.h  call.cc  call.h  channel.cc  channel.h  channelmanager.cc  channelmanager.h  currentspeakermonitor.cc  currentspeakermonitor.h  externalhmac.cc  externalhmac.h  mediamessages.cc  mediasession.cc  mediasession.h  mediasessionclient.cc  mediasessionclient.h  srtpfilter.cc  srtpfilter.h
session/tunnel/: pseudotcpchannel.cc  pseudotcpchannel.h  securetunnelsessionclient.cc  tunnelsessionclient.cc
sound/: alsasoundsystem.cc  alsasymboltable.cc  alsasymboltable.h
test/: console.cc  console.h  jingleclient.cc  jingleclient.h
xmllite/: xmlbuilder.cc  xmlbuilder.h  xmlparser.cc  xmlparser.h
xmpp/: Makefile  chatroommoduleimpl.cc  chattask.cc  chattask.h  constants.cc  constants.h  hangoutpubsubclient.cc  hangoutpubsubclient.h  messageouttask.cc  messageouttask.h  mucroomdiscoverytask.cc  mucroomdiscoverytask.h  mucroomlookuptask.h  presencestatus.h  pubsubclient.cc  pubsubclient.h  pubsubstateclient.cc  pubsubstateclient.h  pubsubtasks.cc  pubsubtasks.h  rostermodule.h  rostermoduleimpl.cc  xmppclient.cc  xmppclient.h  xmppclientsettings.h  xmppengine.h  xmppengineimpl.cc  xmppengineimpl.h  xmpplogintask.cc  xmpppump.cc  xmpppump.h  xmppregistertask.cc  xmppregistertask.h  xmppsocket.cc  xmppstanzaparser.cc  xmppthread.cc
